[gd_scene load_steps=8 format=2]

[ext_resource path="res://content/icons/large_unknown.png" type="Texture" id=1]
[ext_resource path="res://systems/options/LanguageOption.gd" type="Script" id=2]
[ext_resource path="res://gui/theme.tres" type="Theme" id=3]
[ext_resource path="res://gui/buttons/button_normal.png" type="Texture" id=4]
[ext_resource path="res://gui/buttons/button_focus_expand_beyond_parent.tres" type="StyleBox" id=6]
[ext_resource path="res://gui/fonts/FontSmall.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxTexture" id=4]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 76, 40 )
margin_left = 24.0
margin_right = 4.0
margin_top = 12.0
margin_bottom = 8.0

[node name="LanguageOption" type="PanelContainer"]
margin_left = 300.0
margin_top = 182.0
margin_right = 609.0
margin_bottom = 288.0
rect_min_size = Vector2( 350, 104 )
focus_mode = 2
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 334.0
margin_bottom = 90.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 314.0
margin_bottom = 70.0
custom_constants/separation = 12

[node name="Flag" type="TextureRect" parent="MarginContainer/HBoxContainer" groups=["unstyled"]]
margin_right = 100.0
margin_bottom = 66.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 112.0
margin_right = 310.0
margin_bottom = 66.0
size_flags_horizontal = 3
custom_constants/separation = 8
alignment = 1

[node name="Language" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 7.0
margin_right = 198.0
margin_bottom = 32.0
text = "Language"
align = 1
valign = 2

[node name="TranslationType" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 198.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 7 )
text = "TranslationType"
align = 1
autowrap = true

[node name="SelectedPanel" type="Panel" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 334.0
margin_bottom = 90.0
custom_styles/panel = ExtResource( 6 )

[connection signal="focus_entered" from="." to="." method="_on_LanguageOption_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_LanguageOption_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_LanguageOption_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_LanguageOption_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LanguageOption_mouse_exited"]
